--- a/public/pembangkit_listrik.css
+++ b/public/pembangkit_listrik.css
@@ -22,10 +22,10 @@ display: none;
  }
 .leaflet-sidebar.right {
 right: 0;
-padding-left: 0; 
+padding-left: 0;
 }
 .leaflet-sidebar.right.visible {
-right: 0; 
+right: 0;
 display: block;
 }
 .leaflet-sidebar > .leaflet-control {
@@ -40,7 +40,7 @@ background: white;
 }
 .leaflet-touch .leaflet-sidebar > .leaflet-control {
 box-shadow: none;
-background-clip: padding-box; 
+background-clip: padding-box;
 }
 @media (max-width: 767px) {
 .leaflet-sidebar {
@@ -48,13 +48,13 @@ width: 100%;
 padding: 0;
  }
 .leaflet-sidebar.right.visible ~ .leaflet-right {
-right: 100%; 
+right: 100%;
 }
 .leaflet-sidebar.right {
-right: -100%; 
+right: -100%;
 }
 .leaflet-sidebar.right.visible {
-  right: 0; 
+  right: 0;
 }
 .leaflet-sidebar > .leaflet-control {
 box-shadow: none;
@@ -62,32 +62,32 @@ box-shadow: none;
 border-radius: 0;
  }
 .leaflet-touch .leaflet-sidebar > .leaflet-control {
-  border: 0; 
-} 
+  border: 0;
+}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 .leaflet-sidebar {
-width: 305px; 
+width: 305px;
 }
 .leaflet-sidebar.right.visible ~ .leaflet-right {
-right: 305px; 
-} 
+right: 305px;
+}
 }
 @media (min-width: 992px) and (max-width: 1199px) {
 .leaflet-sidebar {
-width: 20%; 
+width: 20%;
 }
 .leaflet-sidebar.right.visible ~ .leaflet-right {
-right: 390px; 
+right: 390px;
 }
  }
 @media (min-width: 1200px) {
 .leaflet-sidebar {
-width: 20%; 
+width: 20%;
 }
 .leaflet-sidebar.right.visible ~ .leaflet-right {
-right: 0; 
-} 
+right: 0;
+}
 }
 .leaflet-sidebar .close {
 position: absolute;
@@ -192,7 +192,7 @@ z-index: 1000; }
   background-image: url(image/search_icon_blue.png);
   background-repeat: no-repeat;
   background-size: 8%;
-  background-position: 4%; 
+  background-position: 4%;
   border: 1px solid #5198F8;
   border-radius:8px;
   height: 4vh;
@@ -204,8 +204,8 @@ z-index: 1000; }
   left: 13%;
   opacity: 0.5;
 }
-.search:focus { 
-  background-image: none; 
+.search:focus {
+  background-image: none;
   outline: none;
   padding-left: 5%;
 }
@@ -213,13 +213,14 @@ z-index: 1000; }
   opacity: 0;
 }
 .search::-ms-fill{
-  background-image: none; 
+  background-image: none;
 }
 .list-kategori{
   display: flex;
   flex-direction: row;
   margin-top: 5%;
   white-space: nowrap;
+    overflow-x: scroll;
 }
 .btn-kategori{
   font-family: poppins;
@@ -231,7 +232,7 @@ z-index: 1000; }
   border: 0.5px solid #5198F8;
   color: #BFBFBF;
   background: #FFF;
-  margin-right: 1%;
+  margin-right: 1%;cursor: pointer;
 }
 .btn-kategori.active{
   font-family: poppins;
@@ -258,4 +259,13 @@ z-index: 1000; }
   height: 8vh;
   display: flex;
   align-items: center;
+}
+::-webkit-scrollbar {
+    width: 2px;
+    background-color: white;
+}
+::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 10px;
+    margin-right: 10px;
 }
