--- a/public/pembangkit_listrik.css
+++ b/public/pembangkit_listrik.css
@@ -260,6 +260,15 @@ z-index: 1000; }
   display: flex;
   align-items: center;
 }
+.list-item.active{
+    background: #F3F8FF;
+    border-top: 1px solid #808080;
+    border-bottom: 1px solid #808080;
+    width: 100%;
+    height: 8vh;
+    display: flex;
+    align-items: center;
+}
 ::-webkit-scrollbar {
     width: 2px;
     background-color: white;
