--- a/public/pembangkit_listrik.css
+++ b/public/pembangkit_listrik.css
@@ -278,3 +278,80 @@ z-index: 1000; }
     border-radius: 10px;
     margin-right: 10px;
 }
+
+
+/* ChatBox Style */
+.chat-input-container{
+  border: 1px solid #5198F8;
+  width: 100%;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  /* height: auto; */
+  padding-left: 5%;
+  
+}
+
+.chat-input {
+  height: auto;
+}
+.chat-input::placeholder{
+  color: #858585;
+  font-family: Lexend;
+}
+.chat-input:focus{
+  outline: none;
+  font-family: Lexend;
+}
+
+#chatContentContainer {
+    height: 250px;
+    display: grid;
+    grid-gap: 2%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    
+}
+#chatContentContainer::-webkit-scrollbar {
+  width: 10px;
+}
+#chatContentContainer::-webkit-scrollbar-thumb {
+  background: #f0f0f0;
+}
+
+.chat-content {
+    border-radius: 10px;
+    display: flex;
+    max-width: 60%;
+    padding: 5%;
+    margin: 1vh;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.response {
+    background-color: #5198F8;
+    justify-self: left;
+}
+
+.question {
+    background-color: #FFFFFF;
+    justify-self: right;
+}
+
+.error {
+  width: 80%;
+  background-color: white;
+  border: 3px solid rgb(255, 114, 114);
+  justify-self: center;
+  font-size: small;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  gap: 6%;
+}
+
+pre {
+  display: inline-flex;
+  word-wrap: break-word;
+  box-sizing: border-box;
+  white-space: pre-wrap;
+}
