--- a/public/home.css
+++ b/public/home.css
@@ -357,3 +357,11 @@ nav a{
     box-shadow: 0px 1px 2px 0px rgba(20, 17, 17, 0.71);
     margin-left: 7px;
 }
+.btn-penjelasan{
+    background-color: #021C3F;
+    color: #B9D7FF;
+}
+.btn-penjelasan.active{
+    background-color: #B9D7FF;
+    color: #021C3F;
+}
