--- a/public/admin_pembangkit.css
+++ b/public/admin_pembangkit.css
@@ -90,6 +90,7 @@ body{
     background-repeat: no-repeat;
     background-size: 15%;
     background-position: 15%;
+    cursor: pointer
 }
 .btn-kategori.active{
     font-family: Lexend;
@@ -120,6 +121,12 @@ body{
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     background-color: white;
+}
+.list-content {
+    cursor: pointer
+}
+.list-content-active {
+    background-color: #E2EEFE;
 }
 .table{
     width: 100%;
@@ -156,6 +163,7 @@ body{
     background-position: 25%;
     box-shadow: 0px 2px 4px 0px rgba(20, 17, 17, 0.71);
     padding-left: 20px;
+    cursor: pointer
 }
 .btn-tambah{
     font-family: Lexend;
@@ -167,6 +175,7 @@ body{
     border-radius: 6px;
     border: none;
     margin-left: 2%;
+    cursor: pointer
 }
 .detail{
     width: 100%;
@@ -193,7 +202,41 @@ body{
     background-size: 20%;
     background-position: 20%;
     padding-left: 20px;
+    cursor: pointer
 }
+.btn-batal{
+    font-family: Lexend;
+    font-weight: 400;
+    width: 10%;
+    height: 4vh;
+    color: #2C2C2C;
+    background-color: white;
+    border-radius: 6px;
+    border: 1px solid #BF3535;
+    background-image: url(image/icon_batal.png);
+    background-repeat: no-repeat;
+    background-size: 20%;
+    background-position: 15%;
+    padding-left: 20px;
+    cursor: pointer
+}
+.btn-selesai{
+    font-family: Lexend;
+    font-weight: 400;
+    width: 12%;
+    height: 4vh;
+    color: #2C2C2C;
+    background-color: white;
+    border-radius: 6px;
+    border: 1px solid #43D02C;
+    background-image: url(image/icon_selesai.png);
+    background-repeat: no-repeat;
+    background-size: 20%;
+    background-position: 10%;
+    padding-left: 20px;
+    cursor: pointer
+}
+
 .judul-detail{
     font-family: Lexend;
     font-size: 24px;
@@ -210,7 +253,21 @@ body{
 .container-item.hide{
     display: none;
 }
-.input{
+.input-edit{
+    width: 70%;
+    height: 3vh;
+    border-radius: 5px;
+    border: 1px solid #FFF;
+    color: #727272;
+    font-family: Lexend;
+}
+.input-edit:focus{
+    border-radius: 5px;
+    border: 1px solid #DADADA;
+    outline: none;
+}
+
+.input-tambah{
     width: 70%;
     height: 3vh;
     border-radius: 5px;
@@ -218,10 +275,9 @@ body{
     color: #727272;
     font-family: Lexend;
 }
-.input:focus{
-    border-radius: 5px;
-    border: 1px solid #DADADA;
-    outline: none;
+
+input:disabled {
+    background-color: #FFF;
 }
 .container-input{
     display: flex;
