--- a/public/pembangkit_listrik.css
+++ b/public/pembangkit_listrik.css
@@ -256,10 +256,11 @@ z-index: 1000; }
   border-top: 1px solid #808080;
   border-bottom: 1px solid #808080;
   width: 100%;
-  height: 8vh;
   display: flex;
   align-items: center;
     cursor: pointer;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
 }
 .list-item.active{
     background: #F3F8FF;
